--- a/services.html
+++ b/services.html
@@ -575,8 +575,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="ftr-text">
                   <p>
-                    <a href="mailto:anupkjha01@gmail.com"
-                      >anupkjha01@gmail.com</a
+                    <a href="mailto:sksandy3869@gmail.com"
+                      >sksandy3869gmail.com</a
                     >
                   </p>
                 </div>
